--- a/src/components/selectLang/index.less
+++ b/src/components/selectLang/index.less
@@ -1,6 +1,6 @@
 .avatar{
     display: flex;
-    background: #ffffff;
+    // background: #ffffff;
     width:22px;
     height:22px; 
     border-radius:50%;
